kubernetes/simplist-frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simplist-frontend
spec:
  selector:
    matchLabels:
      app: simplist-frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: simplist-frontend
    spec:
      containers:
        - name: simplist-frontend
          image: 192.168.49.2:30400/simplist-frontend:$BUILD_TAG
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: simplist-frontend
  labels:
    app: simplist-frontend
spec:
  selector:
    app: simplist-frontend
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30003
  type: NodePort
